syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "go-grpc/client/proto";

package user;

service UserService {
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  }

  message User {
    string id = 1;
    string user_name = 2;
    string pass = 3;
    string email = 4;
    string phone = 5;
    string created_at = 6;
    string updated_at = 7;
    string deleted_at = 8;
  }
  

  message ListUsersRequest {
    int64 to = 1;
    int64 from = 2;
  }

  message ListUsersResponse {
    repeated User users = 1;
  }

  message GetUserResponse {
    User user = 1;
  }
  
  message CreateUserRequest {
    User user = 1;
  }

  message CreateUserResponse {
    User user = 1;
  }

  message GetUserRequest {
    string id = 1;
  }

  message DeleteUserRequest {
    string id = 1;
  }

  message DeleteUserResponse {
    bool success = 1;
  }

  message UpdateUserRequest {
    string id = 1;
    User user = 2;
  }

  message UpdateUserResponse {
    User user = 1;
  }